# runner_tools

localization/: Cargo.toml
localization/src/: auto_api.rs  auto_release.rs  main.rs  pr_check.rs  utils.rs
localization/test_files/: global.ini
