[package]
name = "localization"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
structopt = "0.3"
regex = "1.11.1"
anyhow = "1.0"
octocrab = "0.42.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
