[package]
name = "localization"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
structopt = "0.3"
octocrab = "0.42.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["default-tls", "json"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
